Updated NetisHR v2 files

--- a/netishr/administrator.html
+++ b/netishr/administrator.html
@@ -439,9 +439,12 @@
                                     </div>
                                     <div class="ibox-content">
                                         <p></p>
+                                        <div><a href="#">Companies and Branches</a>
+                                            <div class="small">Set up companies and branches</div>
+                                        </div>
+                                        <p></p>
                                         <div><a href="#">Upload Job Titles</a>
                                             <div class="small">Upload Job Titles</div>
-
                                         </div>
                                     </div>
                                 </div>
