--- a/netishr/index.html
+++ b/netishr/index.html
@@ -62,16 +62,7 @@
                     <li class="active">
                         <a href="index.html"><i class="fa fa-th-large"></i><span class="nav-label">Organisation</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
-                            <li><a href="#">Level<span class="fa arrow"></span></a>
-                                <ul class="nav nav-third-level">
-                                    <li>
-                                        <a href="#">Branches</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Internal Groups</a>
-                                    </li>
-                                </ul>
-                            </li>
+                            <li><a href="#">Units</a></li>
                             <li><a href="#">Structure<span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
@@ -88,7 +79,7 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li><a href="org_charts.html">Charts</a></li>
+                            <li><a href="organisation_diagrams.html">Diagrams</a></li>
                         </ul>
                     </li>
                     <li>
@@ -110,17 +101,17 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-envelope"></i> <span class="nav-label">Person</a>
+                        <a href="#"><i class="fa fa-envelope"></i> <span class="nav-label">Person</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
-                            <li><a href="persons.html">Persons</a></li>
+                            <li><a href="persons.html">Staffs</a></li>
+                            <li><a href="#">Applicants</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-pie-chart"></i> <span class="nav-label">Recruitment</span>  </a>
+                        <a href="#"><i class="fa fa-pie-chart"></i> <span class="nav-label">Recruitment</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
                             <li><a href="#">Manpower Planning</a></li>
                             <li><a href="#">Recruitment Planning</a></li>
-                            <li><a href="#">Applicants</a></li>
                             <li><a href="#">Selection Process</a></li>
                         </ul>
                     </li>
@@ -176,8 +167,7 @@
                             <li><a href="#">Syllabus</a></li>
                             <li><a href="#">Events</a></li>
                             <li><a href="#">Individual Development Plan</a></li>
-                            <li><a href="#">Training Plan</a></li>
-                            <li><a href="#">Executed Training</a></li>
+                            <li><a href="#">Training Plans and Execution</a></li>
                         </ul>
                     </li>
                     <li>
