--- a/netishr/performance_kpi_view.html
+++ b/netishr/performance_kpi_view.html
@@ -480,6 +480,7 @@
                         <div class="ibox">
                             <div class="ibox-content">
 
+                                <!-- "Status" field is for workflow, and can be implemented later -->
                                 <table class="footable table table-stripped toggle-arrow-tiny" data-page-size="15">
                                     <thead>
                                         <tr>
