--- a/netishr/administrator_general_settings.html
+++ b/netishr/administrator_general_settings.html
@@ -16,6 +16,10 @@
     <link href="css/animate.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
+    <!-- X-editable CDN styles -->
+    <link href="css/bootstrap-editable.css" rel="stylesheet" />
+
+
 </head>
 
 <body>
@@ -432,9 +436,11 @@
                                         <tbody>
                                             <tr class="gradeX">
                                                 <td>AutoPayslipPassword</td>
-                                                <td>0 or 1, 0 means Admin has the password
+                                                <td>When "No", it means admin has the password
                                                 </td>
-                                                <td>0</td>
+                                                <td>
+                                                <a href="#" id="yesno" data-type="select" data-pk="1" data-value="" data-title="Select 0 or 1" class="editable editable-click" style="color: gray;">not selected</a>
+                                                </td>
 
                                                 <td class="text-right">
                                                     <div class="btn-group">
@@ -549,7 +555,9 @@
                                                 <td>BossName</td>
                                                 <td>String
                                                 </td>
-                                                <td>Your Boss Name Here</td>
+                                                <td>
+                                                    <a href="#" id="username" data-type="text" data-pk="1" data-title="Enter boss' name" class="editable editable-click"></a>
+                                                </td>
 
                                                 <td class="text-right">
                                                     <div class="btn-group">
@@ -562,7 +570,9 @@
                                                 <td>BossTaxIDNumber</td>
                                                 <td>Numeric
                                                 </td>
-                                                <td>00000</td>
+                                                <td>
+                                                    <a href="#" id="username" data-type="text" data-pk="1" data-title="Enter boss' tax ID no." class="editable editable-click"></a>
+                                                </td>
 
                                                 <td class="text-right">
                                                     <div class="btn-group">
@@ -675,6 +685,10 @@
 
     <script src="js/plugins/dataTables/datatables.min.js"></script>
 
+    <!-- X-editable CDN styles -->
+    <script src="js/bootstrap-editable.min.js"></script>
+
+
     <!-- Custom and plugin javascript -->
     <script src="js/inspinia.js"></script>
     <script src="js/plugins/pace/pace.min.js"></script>
@@ -719,6 +733,119 @@
 
         });
     </script>
+
+    <-- Editable scripts --></-->
+    <script>
+        $(function () {
+
+
+            //turn to inline mode
+            $.fn.editable.defaults.mode = 'inline';
+
+            //defaults
+            $.fn.editable.defaults.url = '#';
+
+            //editables
+            $('#username').editable({
+                url: '#',
+                type: 'text',
+                pk: 1,
+                name: 'username',
+                title: 'Enter username'
+            });
+
+            $('#firstname').editable({
+                validate: function (value) {
+                    if ($.trim(value) == '') return 'This field is required';
+                }
+            });
+
+            $('#yesno').editable({
+                prepend: "not selected",
+                source: [
+                    {
+                        value: 0,
+                        text: 'No'
+                    },
+                    {
+                        value: 1,
+                        text: 'Yes'
+                    }
+                ],
+                display: function (value, sourceData) {
+                    var colors = {
+                            "": "gray",
+                            1: "green",
+                            2: "blue"
+                        },
+                        elem = $.grep(sourceData, function (o) {
+                            return o.value == value;
+                        });
+
+                    if (elem.length) {
+                        $(this).text(elem[0].text).css("color", colors[value]);
+                    } else {
+                        $(this).empty();
+                    }
+                }
+            });
+
+            $('#dob').editable();
+
+            $('#event').editable({
+                placement: 'right',
+                combodate: {
+                    firstItem: 'name'
+                }
+            });
+
+            $('#comments').editable({
+                showbuttons: 'bottom'
+            });
+
+            $('#fruits').editable({
+                pk: 1,
+                limit: 3,
+                source: [
+                    {
+                        value: 1,
+                        text: 'banana'
+                    },
+                    {
+                        value: 2,
+                        text: 'peach'
+                    },
+                    {
+                        value: 3,
+                        text: 'apple'
+                    },
+                    {
+                        value: 4,
+                        text: 'watermelon'
+                    },
+                    {
+                        value: 5,
+                        text: 'orange'
+                    }
+                ]
+            });
+
+            $('#user .editable').on('hidden', function (e, reason) {
+                if (reason === 'save' || reason === 'nochange') {
+                    var $next = $(this).closest('tr').next().find('.editable');
+                    if ($('#autoopen').is(':checked')) {
+                        setTimeout(function () {
+                            $next.editable('show');
+                        }, 300);
+                    } else {
+                        $next.focus();
+                    }
+                }
+            });
+
+        });
+    </script>
+
 
 </body>
 
