--- a/netishr/competency_dictionary_new.html
+++ b/netishr/competency_dictionary_new.html
@@ -19,12 +19,6 @@
 
 
 
-
-
-
-
-
-
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
 
@@ -139,16 +133,7 @@
                     <li class="active">
                         <a href="index.html"><i class="fa fa-th-large"></i><span class="nav-label">Organisation</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
-                            <li><a href="#">Level<span class="fa arrow"></span></a>
-                                <ul class="nav nav-third-level">
-                                    <li>
-                                        <a href="#">Branches</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Internal Groups</a>
-                                    </li>
-                                </ul>
-                            </li>
+                            <li><a href="#">Units</a></li>
                             <li><a href="#">Structure<span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
@@ -165,7 +150,7 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li><a href="org_charts.html">Charts</a></li>
+                            <li><a href="organisation_diagrams.html">Diagrams</a></li>
                         </ul>
                     </li>
                     <li>
@@ -187,30 +172,33 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-envelope"></i> <span class="nav-label">Person</a>
+                        <a href="#"><i class="fa fa-envelope"></i> <span class="nav-label">Person</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
-                            <li><a href="persons.html">Persons</a></li>
+                            <li><a href="persons.html">Staffs</a></li>
+                            <li><a href="#">Applicants</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-pie-chart"></i> <span class="nav-label">Recruitment</span>  </a>
+                        <a href="#"><i class="fa fa-pie-chart"></i> <span class="nav-label">Recruitment</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
                             <li><a href="#">Manpower Planning</a></li>
                             <li><a href="#">Recruitment Planning</a></li>
-                            <li><a href="#">Applicants</a></li>
                             <li><a href="#">Selection Process</a></li>
                         </ul>
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-flask"></i><span class="nav-label">Performance</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
-                            <li><a href="graph_flot.html"><span class="nav-label">KPI<span class="fa arrow"></span></a>
+                            <li><a href="graph_flot.html"><span class="nav-label">Indicators<span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
-                                        <a href="perspective.html">Corporate Perspective/Objetives</a>
+                                        <a href="performance_kpi_view.html">KPIs</a>
                                     </li>
                                     <li>
-                                        <a href="performance_kpi_view.html">Assign and view KPIs</a>
+                                        <a href="#">OKRs</a>
+                                    </li>
+                                    <li>
+                                        <a href="performance_bsc.html">BSCs</a>
                                     </li>
                                 </ul>
                             </li>
@@ -218,14 +206,14 @@
                             <li><a href="#"><span class="nav-label">Planning</span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
-                                        <a href="#">Result Targets (KPI)</a>
+                                        <a href="performance_planning.html">Result Targets (KPI)</a>
                                     </li>
                                     <li>
                                         <a href="#">Process Targets (Competency)</a>
                                     </li>
                                 </ul>
                             </li>
-                            <li><a href="#">Coaching</a></li>
+                            <li><a href="performance_coaching.html">Coaching</a></li>
                             <li><a href="#">Evidence</a></li>
                             <li><a href="#"><span class="nav-label">Evaluation</span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
@@ -250,8 +238,7 @@
                             <li><a href="#">Syllabus</a></li>
                             <li><a href="#">Events</a></li>
                             <li><a href="#">Individual Development Plan</a></li>
-                            <li><a href="#">Training Plan</a></li>
-                            <li><a href="#">Executed Training</a></li>
+                            <li><a href="#">Training Plans and Execution</a></li>
                         </ul>
                     </li>
                     <li>
@@ -275,22 +262,19 @@
                                         <a href="#">Work Shifts</a>
                                     </li>
                                     <li>
-                                        <a href="#">General Leaves</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Attendance Leaves</a>
+                                        <a href="#">Leaves</a>
                                     </li>
                                     <li>
                                         <a href="#">Overtimes</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Attendances</a>
                                     </li>
                                     <li>
                                         <a href="#">Benefits</a>
                                     </li>
                                     <li>
                                         <a href="#">Business Trips</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Attendance</a>
                                     </li>
                                 </ul>
                             </li>
@@ -311,17 +295,6 @@
                                     </li>
                                     <li>
                                         <a href="#">Payslip</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#">Benefits <span class="fa arrow"></span></a>
-                                <ul class="nav nav-third-level">
-                                    <li>
-                                        <a href="#">TBA</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">TBA</a>
                                     </li>
                                 </ul>
                             </li>
