--- a/netishr/job_roles.html
+++ b/netishr/job_roles.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -28,16 +28,12 @@
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
-                        <div class="dropdown profile-element">
-                            <span>
-                                <img alt="image" class="img-circle" src="img/profile_small.jpg" />
-                            </span>
+                        <div class="dropdown profile-element"> <span>
+                            <img alt="image" class="img-circle" src="img/profile_small.jpg" />
+                             </span>
                             <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                                <span class="clear">
-                                    <span class="block m-t-xs">
-                                        <strong class="font-bold">Arnold Siboro</strong>
-                                    </span> <span class="text-muted text-xs block">HR Admin <b class="caret"></b></span>
-                                </span>
+                                <span class="clear"> <span class="block m-t-xs"> <strong class="font-bold">Arnold Siboro</strong>
+                             </span> <span class="text-muted text-xs block">HR Admin <b class="caret"></b></span> </span>
                             </a>
                             <ul class="dropdown-menu animated fadeInRight m-t-xs">
                                 <li><a href="profile.html">Profile</a></li>
@@ -51,25 +47,15 @@
                             NHR
                         </div>
                     </li>
+
                     <li>
                         <a href="index.html"><i class="fa fa-diamond"></i><span class="nav-label">Main</span></a>
                     </li>
                     <li class="active">
                         <a href="index.html"><i class="fa fa-th-large"></i><span class="nav-label">Organisation</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
-                            <li>
-                                <a href="#">Level<span class="fa arrow"></span></a>
-                                <ul class="nav nav-third-level">
-                                    <li>
-                                        <a href="#">Branches</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Internal Groups</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#">Structure<span class="fa arrow"></span></a>
+                            <li><a href="#">Units</a></li>
+                            <li><a href="#">Structure<span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
                                         <a href="job_levels.html">Job Levels/Sub-levels</a>
@@ -85,14 +71,13 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li><a href="org_charts.html">Charts</a></li>
+                            <li><a href="organisation_diagrams.html">Diagrams</a></li>
                         </ul>
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-bar-chart-o"></i><span class="nav-label">Job</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
-                            <li>
-                                <a href="#"><span class="nav-label">Competency Model</span><span class="fa arrow"></span></a>
+                            <li><a href="#"><span class="nav-label">Competency Model</span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
                                         <a href="competency_dictionary.html">Competency Dictionary</a>
@@ -108,50 +93,50 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-envelope"></i> <span class="nav-label">Person</a>
+                        <a href="#"><i class="fa fa-envelope"></i> <span class="nav-label">Person</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
-                            <li><a href="persons.html">Persons</a></li>
+                            <li><a href="persons.html">Staffs</a></li>
+                            <li><a href="#">Applicants</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-pie-chart"></i> <span class="nav-label">Recruitment</span>  </a>
+                        <a href="#"><i class="fa fa-pie-chart"></i> <span class="nav-label">Recruitment</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
                             <li><a href="#">Manpower Planning</a></li>
                             <li><a href="#">Recruitment Planning</a></li>
-                            <li><a href="#">Applicants</a></li>
                             <li><a href="#">Selection Process</a></li>
                         </ul>
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-flask"></i><span class="nav-label">Performance</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
-                            <li>
-                                <a href="graph_flot.html"><span class="nav-label">KPI<span class="fa arrow"></span></a>
+                            <li><a href="graph_flot.html"><span class="nav-label">Indicators<span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
-                                        <a href="perspective.html">Corporate Perspective/Objetives</a>
+                                        <a href="performance_kpi_view.html">KPIs</a>
                                     </li>
                                     <li>
-                                        <a href="performance_kpi_view.html">Assign and view KPIs</a>
+                                        <a href="#">OKRs</a>
+                                    </li>
+                                    <li>
+                                        <a href="performance_bsc.html">BSCs</a>
                                     </li>
                                 </ul>
                             </li>
 
-                            <li>
-                                <a href="#"><span class="nav-label">Planning</span><span class="fa arrow"></span></a>
+                            <li><a href="#"><span class="nav-label">Planning</span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
-                                        <a href="#">Result Targets (KPI)</a>
+                                        <a href="performance_planning.html">Result Targets (KPI)</a>
                                     </li>
                                     <li>
                                         <a href="#">Process Targets (Competency)</a>
                                     </li>
                                 </ul>
                             </li>
-                            <li><a href="#">Coaching</a></li>
+                            <li><a href="performance_coaching.html">Coaching</a></li>
                             <li><a href="#">Evidence</a></li>
-                            <li>
-                                <a href="#"><span class="nav-label">Evaluation</span><span class="fa arrow"></span></a>
+                            <li><a href="#"><span class="nav-label">Evaluation</span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
                                         <a href="#">Periodical Evaluation - Result Targets (KPI)</a>
@@ -174,8 +159,7 @@
                             <li><a href="#">Syllabus</a></li>
                             <li><a href="#">Events</a></li>
                             <li><a href="#">Individual Development Plan</a></li>
-                            <li><a href="#">Training Plan</a></li>
-                            <li><a href="#">Executed Training</a></li>
+                            <li><a href="#">Training Plans and Execution</a></li>
                         </ul>
                     </li>
                     <li>
@@ -199,22 +183,19 @@
                                         <a href="#">Work Shifts</a>
                                     </li>
                                     <li>
-                                        <a href="#">General Leaves</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Attendance Leaves</a>
+                                        <a href="#">Leaves</a>
                                     </li>
                                     <li>
                                         <a href="#">Overtimes</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Attendances</a>
                                     </li>
                                     <li>
                                         <a href="#">Benefits</a>
                                     </li>
                                     <li>
                                         <a href="#">Business Trips</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Attendance</a>
                                     </li>
                                 </ul>
                             </li>
@@ -238,23 +219,15 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li>
-                                <a href="#">Benefits <span class="fa arrow"></span></a>
-                                <ul class="nav nav-third-level">
-                                    <li>
-                                        <a href="#">TBA</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">TBA</a>
-                                    </li>
-                                </ul>
-                            </li>
                         </ul>
                     </li>
                     <li>
                         <a href="administrator.html"><i class="fa fa-diamond"></i><span class="nav-label">Administrator</span></a>
                     </li>
+
+
                 </ul>
+
             </div>
         </nav>
 
@@ -702,7 +675,8 @@
                                                                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
                                                                 <i class="fa fa-file-text modal-icon"></i>
                                                                 <h4 class="modal-title">Executive Responsibility</h4>
-                                                                <small class="font-bold">Please input Input Responsibility for </small><label class="text-navy">Executive</label>
+                                                                <small class="font-bold">Please input Input Responsibility for </small>
+                                                                <label class="text-navy">Executive</label>
                                                             </div>
                                                             <div class="modal-body">
                                                                 <div class="form-group row">
@@ -832,7 +806,8 @@
                                                                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
                                                                 <i class="fa fa-file-text modal-icon"></i>
                                                                 <h4 class="modal-title">Direktorat Responsibility</h4>
-                                                                <small class="font-bold">Please input Input Responsibility for </small><label class="text-navy">Direktorat</label>
+                                                                <small class="font-bold">Please input Input Responsibility for </small>
+                                                                <label class="text-navy">Direktorat</label>
                                                             </div>
                                                             <div class="modal-body">
                                                                 <div class="form-group row">
@@ -962,7 +937,8 @@
                                                                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
                                                                 <i class="fa fa-file-text modal-icon"></i>
                                                                 <h4 class="modal-title">Departement Responsibility</h4>
-                                                                <small class="font-bold">Please input Input Responsibility for </small><label class="text-navy">Departement</label>
+                                                                <small class="font-bold">Please input Input Responsibility for </small>
+                                                                <label class="text-navy">Departement</label>
                                                             </div>
                                                             <div class="modal-body">
                                                                 <div class="form-group row">
@@ -1092,7 +1068,8 @@
                                                                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
                                                                 <i class="fa fa-file-text modal-icon"></i>
                                                                 <h4 class="modal-title">Staff Responsibility</h4>
-                                                                <small class="font-bold">Please input Input Responsibility for </small><label class="text-navy">Staff</label>
+                                                                <small class="font-bold">Please input Input Responsibility for </small>
+                                                                <label class="text-navy">Staff</label>
                                                             </div>
                                                             <div class="modal-body">
                                                                 <div class="form-group row">
